gcc/testsuite/gcc.dg/unclosed-init.c
int unclosed[] = { /* { dg-message "18: to match this '.'" } */
  42
 /* { dg-error "0: expected '.' at end of input" } */
